# SIMPLE_PROJECTION_PROCESS

./: CMakeLists.txt  README.md
src/: main.cpp
